# libmuslpolyfill

./: .gitignore  meson.build  meson.version  meson_options.txt
include/: glob.h  meson.build  printf.h
src/: glob.c  libmuslpolyfill.pc.in  libmuslpolyfill.sym  macro.h  meson.build  printf.c
